Import of BINGOS/Env-Sanctify-Moosified-1.06 from CPAN.
gitpan-cpan-distribution: Env-Sanctify-Moosified
gitpan-cpan-version:      1.06
gitpan-cpan-path:         BINGOS/Env-Sanctify-Moosified-1.06.tar.gz
gitpan-cpan-author:       BINGOS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,31 +3,22 @@ abstract: 'Lexically scoped sanctification of %ENV'
 author:
   - 'Chris Williams <chris@bingosnet.co.uk>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
   Test::More: 0.47
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.89'
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Env-Sanctify-Moosified
-no_index:
-  directory:
-    - examples
-    - inc
-    - t
-provides:
-  Env::Sanctify::Moosified:
-    file: lib/Env/Sanctify/Moosified.pm
-    version: 1.04
 requires:
-  Moose: 0.79
-  perl: 5.6.0
+  Moo: 0
+  MooX::late: 0
+  perl: 5.006
 resources:
-  homepage: http://github.com/bingos/env-sanctify-moosified/tree
-  license: http://dev.perl.org/licenses/
-  repository: git://github.com/bingos/env-sanctify-moosified.git
-version: 1.04
+  homepage: https://github.com/bingos/env-sanctify-moosified
+  repository: https://github.com/bingos/env-sanctify-moosified.git
+version: 1.06
